styles/index.css
:root {
  --LIGHT_PURPLE: #CBC3E3;
  --LIGHT_GRAY: #D9D9D9;
  --OFF_WHITE: #F5F5F5;
}

html, body {
  margin: 0;
  padding: 0;
  height: 100%;
  width: 100%;
  font-family: Arial;
}

nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 10vh;
  width: 100%;
}

ul {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  height: 100%;
  gap: 2vw;
  margin-right: 55px;
}
li {
  list-style: none;
  font-size: calc(1.8vh * 1.5);
  font-weight: 600;
}

a:hover {
  color: #7E58AE;
}

main {
  padding: 0;
  margin: 0;
}

#home_content_right {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
  width: 50%;
  gap: 20px;
  overflow: hidden;
}

#about_image {
  height: 100%;
  width: 100%;

}

#home_content_left {
  padding-left: 50px;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  height: 90%;
  width: 50%;
  gap: 50px;
}

#home_content_left > h1 {
  font-size: 3vw;
  margin: 0;
  padding: 0;
}

#home_content_left > p {
  font-size: 2vw;
  margin: 0;
  padding: 0;
}

#home_content_left > p, #home_content_left > h1 {
  width: 90%; 
}

#home_content_cta_form {
  width: 90%; 
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  gap: 5px;
}
#home_content_cta_input {
  height: 40px;
  width: 50%;
  border-width: 1px;
  border-radius: 5px;
  border-color: white;
  font-size: larger;
  padding-left: 10px;
}

#home_content_cta_button {
  background-color: #7E58AE;
  color: white;
  width: 30%;
  border-color: #7E58AE;
  border-width: 1px;
  border-radius: 5px;
  font-size: larger;
}

.header_img{
  height: 100%;
}

.logo_div {
  margin-left: 50px;
  height: 70%;
}
.logo {
  background-color: green;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
}

#burger {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 25px;
  width: 25px;
  cursor: pointer;
  margin-right: 25px;
}

.burger_line {
  height: 10%;
  width: 100%;
  background-color: black;
}

h2, section {
  margin: 0;
  padding: 0;
}

a {
  text-decoration: none;
  color: black;
}
section {
  height: 90vh;
  display: flex;
  flex-direction: column;
}

.home_section {
  justify-content: center;
  align-items: center;
  background-color: var(--LIGHT_PURPLE);
}

.about_section {
  background-color: white;
}


.features_section {
  justify-content: center;
  align-items: center;
  background-color: var(--LIGHT_GRAY);
}

.subscriptions_section {
  justify-content: center;
  align-items: center;
  background-color: var(--LIGHT_PURPLE);
}
.section_header {
  display: flex;
  justify-content: flex-start;
  padding-left: 50px;
  align-items: center;
  height: 10vh;
  background-color: var(--OFF_WHITE);
}

#home_content {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 70%;
  width: 95%;
}

.about_section_box {
  padding: 30px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
}

#features_content {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  width: 100%;
  height: 100%;
}

#subscriptions_content {
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.feature_container {
  width: 20%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 30px;
}

.feature_container h3, .feature_container p {
  margin: 0;
  padding: 0;
  text-align: center;
}

.feature_container h3 {
  font-size: 22px;
}

.feature_container p {
  font-style: italic;
}

.feature_info {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  height: 15%;
  gap: 10px;
}

.feature_img {
  width: 80%;
  height: 60%;
}

table {
  width: 90%;
  border: 1px solid black;
  background-color: white;
  border-radius: 10px;
}

td, tr, th {
  border: 1px solid black;
}

td {
  text-align: left;
  padding: 10px;
  min-width: 50px;
}

.bold {
  font-weight: 600;
}

.checkbox {
  text-align: center;
}

.mobile_feature_image {
  height: 90%;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  width: 25%;
}


#mobile_feature_a {
  background-image: url("../assets/map2_screenshot-portrait.png");
}

#mobile_feature_b {
  background-image: url("../assets/task_screenshot_2.png");

}

#mobile_feature_c {
  background-image: url("../assets/story_screenshot2-portrait.png");

}


footer {
  padding: 20px;
  display: flex;
  flex-direction: column;
  gap: 5px;
}

footer p {
  margin: 0;
  padding: 0;
  font-size: 15px;
  text-align: left;
}


@media (max-width: 599px) {

  footer p {
    font-size: 10px;
    text-align: center;
  }

  #header_img_one {
    display: none;
  }

  .home_section {
    justify-content: flex-start;
    padding-top: 50px;
  }
  #home_content {
    justify-content: flex-start;
    flex-direction: column;
    gap: 25px;
    height: 100%;
  }

  #home_content_left {
    width: 100%;
    height: unset;
    padding: 0;
    margin: 0;
    gap: 0;
    display: none;
  }

  #title2 {
    font-size: 12px;
    width: 90%;
    text-align: center;
  }

  #subtitle2 {
    font-size: 12px;
    width: 80%;
    text-align: center;
    font-style: italic;
  }

  #home_content_cta_form2 {
    font-size: 10px;
    align-items: center;
    justify-content: center;
    display: flex;
    gap: 5px;
    width: 70%;
  }

  #home_content_cta_form2 button {
    height: 100%;
    width: 45%;
  }

  #home_content_cta_form2 input {
    height: 30px;
    width: 70%;
  }

  #home_content_left p, #home_content_left h1 {
    text-align: center;
  }

  #home_content_right {
    width: 100%;
    height: 60%;
    padding: 0;
    margin: 0;
    gap: 0;
  }

  nav {
    height: 10vh;
  }

  section {
    height: 90vh
  }

  .logo {
    width: 100%;  
  }

  .logo_div {
    margin-left: 25px;
    width: calc(20% + 10px);
    height: 50%;
  }

  .section_header {
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 5%;
    padding: 10px;
  }

  .section_header > h2 {
    font-size: 15px;
  }

  .section_header > p {
    display: none;
  }

  .section_content {
    height: 95%;
  }

  ul {
    top: 10vh;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    position: absolute;
    right: 0;
    margin: 0;
    padding: 0;
    height: unset;
    gap:0;
  }
  li {
    font-size: 10px;
    width: 30vw;
    display: flex;
    justify-content: center;
    align-items: center;
    color: white;
    background-color: #7E58AE;
    border: 1px solid black;
    margin: 0;
    padding: 10px;
  }

  a {
    margin-left: auto;
    padding: 0;
    color: white;
    text-align: center;
  }

  a:hover {
    color: black;
  }

  #about_section_content {
    display: flex ;
    flex-direction: column;
  }

  .about_section_box {
    height: 50%;
    width: 100%;
    font-size: 1.2vh;
  }

  .about_section_box > h3 {
    margin: 0;
    padding-left: 30px;
  }
  .about_section_box > p {
    padding-left: 30px;
    padding-right: 30px;
    margin-top: 10px;
  }

  #features_content {
    flex-direction: column;
  }

  .feature_container {
    flex-direction: row;
    align-items: center;
    justify-content: center;
    gap: 15px;
    height: 300px;
    border-bottom: 1px solid silver;
    width: 100%;
  }

  .feature_container:last-child {
    border-bottom: none;
  }

  .feature_img {
    display: none;
  }

  .feature_info {
    height: 50%;
  }

  .feature_container  h3, .feature_container p {
    margin: 0;
    padding: 0;
    text-align: center;
    font-size: 15px;
    width: 200px;
  }

  .subscriptions_section {
    height: unset;
    padding-top: 25px;
    padding-bottom: 25px;

  }

  table {
    width: 90%;
  }

  tr, td, th {
    font-size: 8px;
    padding: 7px;
  }



  .about_section_box  {
    padding-left: 0px;
    padding-right: 0px;
    padding-bottom: 10px;
    width: 100%;
  }
}

@media (min-width: 600px) {

  .mobile_feature_image {
    display: none;
  }
  
  nav {
    height: 7vh;
  }
  .logo_div {
    width: 20%;
    height: 50%;
  }
  section {
    height: 93vh
  }

  #about_section_content {
    display: flex ;
    flex-direction: row;
  }

  .about_section_box {
    width: 50%;
    font-size: 1.4vw;
  }


  #home_content_cta_form2,  #home_content_cta_form2 button, #home_content_cta_form2 input, #title2, #subtitle2 {
    display: none;    
  }

}

